Modularize animations to separate LESS files

--- a/tuesday.less
+++ b/tuesday.less
@@ -14,414 +14,10 @@
 	animation-iteration-count: infinite;
 }
 
-/* Basic Fades */
-@keyframes tdFadeIn {
-	0% { 
-		opacity: 0;
-    }
-
-	100% { 
-		opacity: 1;
-    }
-}
-
-@keyframes tdFadeOut {
-	0% { 
-		opacity: 1;
-    }
-
-	100% { 
-		opacity: 0;
-    }
-}
-
-.tdFadeIn {
-	animation-name: tdFadeIn;
-}
-.tdFadeOut {
-	animation-name: tdFadeOut;
-}
-
-
-/* Fading Entrances */
-@keyframes tdFadeInDown {
-	0% { 
-		opacity: 0;
-		transform: translateY(-10px);
-		animation-timing-function: @easeOutCirc;
-    }
-
-	100% { 
-		opacity: 1;
-		transform: translateY(0);
-    }
-}
-
-@keyframes tdFadeInLeft {
-	0% { 
-		opacity: 0;
-		transform: translateX(10px);
-		animation-timing-function: @easeOutCirc;
-    }
-
-	100% { 
-		opacity: 1;
-		transform: translateX(0);
-    }
-}
-
-@keyframes tdFadeInUp {
-	0% { 
-		opacity: 0;
-		transform: translateY(10px);
-		animation-timing-function: @easeOutCirc;
-    }
-
-	100% { 
-		opacity: 1;
-		transform: translateY(0);
-    }
-}
-
-@keyframes tdFadeInRight {
-	0% { 
-		opacity: 0;
-		transform: translateX(-10px);
-		animation-timing-function: @easeOutCirc;
-    }
-
-	100% { 
-		opacity: 1;
-		transform: translateX(0);
-    }
-}
-
-.tdFadeInDown {
-	animation-name: tdFadeInDown;
-}
-.tdFadeInLeft {
-	animation-name: tdFadeInLeft;
-}
-.tdFadeInUp {
-	animation-name: tdFadeInUp;
-}
-.tdFadeInRight {
-	animation-name: tdFadeInRight;
-}
-
-
-/* Fading Exits */
-@keyframes tdFadeOutUp {
-	0% { 
-		opacity: 1;
-		transform: translateY(0);
-		animation-timing-function: @easeOutCirc;
-    }
-
-	100% { 
-		opacity: 0;
-		transform: translateY(-10px);
-    }
-}
-
-@keyframes tdFadeOutRight {
-	0% { 
-		opacity: 1;
-		transform: translateX(0);
-		animation-timing-function: @easeOutCirc;
-    }
-
-	100% { 
-		opacity: 0;
-		transform: translateX(10px);
-    }
-}
-
-@keyframes tdFadeOutDown {
-	0% { 
-		opacity: 1;
-		transform: translateY(0);
-		animation-timing-function: @easeOutCirc;
-    }
-
-	100% { 
-		opacity: 0;
-		transform: translateY(10px);
-    }
-}
-
-@keyframes tdFadeOutLeft {
-	0% { 
-		opacity: 1;
-		transform: translateX(0);
-		animation-timing-function: @easeOutCirc;
-    }
-
-	100% { 
-		opacity: 0;
-		transform: translateX(-10px);
-    }
-}
-
-.tdFadeOutUp {
-	animation-name: tdFadeOutUp;
-}
-.tdFadeOutRight {
-	animation-name: tdFadeOutRight;
-}
-.tdFadeOutDown {
-	animation-name: tdFadeOutDown;
-}
-.tdFadeOutLeft {
-	animation-name: tdFadeOutLeft;
-}
-
-
-/* Zoom In */
-@keyframes tdZoomIn {
-	0% { 
-		opacity: 0;
-		transform: scale(0.85);
-		animation-timing-function: @easeOutCirc;
-    }
-
-	100% { 
-		opacity: 1;
-		transform: scale(1);
-    }
-}
-
-@keyframes tdZoomInBounce {
-	0% { 
-		opacity: 0;
-		transform: scale(0.85);
-		animation-timing-function: @easeOutCirc;
-    }
-	70% {
-		transform: scale(1.03);
-		animation-timing-function: ease;
-	}
-	100% { 
-		opacity: 1;
-		transform: scale(1);
-		animation-timing-function: ease;
-    }
-}
-
-.tdZoomIn {
-	animation-name: tdZoomIn;
-}
-.tdZoomInBounce {
-	animation-name: tdZoomInBounce;
-}
-
-
-/* Zoom Out */
-@keyframes tdZoomOut {
-	0% { 
-		opacity: 1;
-		transform: scale(1);
-		animation-timing-function: @easeOutCirc;
-    }
-	100% { 
-		opacity: 0;
-		transform: scale(0.85);
-		animation-timing-function: ease;
-    }
-}
-
-@keyframes tdZoomOutBounce {
-	0% { 
-		opacity: 1;
-		transform: scale(1);
-		animation-timing-function: @easeOutCirc;
-    }
-	30% {
-		opacity: 1;
-		transform: scale(1.03);
-		animation-timing-function: ease;
-	}
-	100% { 
-		opacity: 0;
-		transform: scale(0.85);
-		animation-timing-function: ease;
-    }
-}
-
-.tdZoomOut {
-	animation-name: tdZoomOut;
-}
-.tdZoomOutBounce {
-	animation-name: tdZoomOutBounce;
-}
-
-
-/* Swing */
-@keyframes tdSwingIn {
-	0% { 
-		opacity: 0;
-		transform: rotate(-10deg) scale(0.85);
-		animation-timing-function: @easeOutCirc;
-    }
-	
-	70% {
-		opacity: 1;
-		transform: rotate(1deg);
-		animation-timing-function: ease;
-	}
-	100% { 
-		opacity: 1;
-		transform: rotate(0deg) scale(1);
-		animation-timing-function: ease;
-    }
-}
-
-@keyframes tdSwingOut {
-	0% { 
-		opacity: 1;
-		transform: rotate(0deg) scale(1);
-		animation-timing-function: @easeOutCirc;
-    }
-	30% {
-		opacity: 1;
-		transform: rotate(-1deg);
-		animation-timing-function: ease;
-	}
-	100% { 
-		opacity: 0;
-		transform: rotate(10deg) scale(0.85);
-		animation-timing-function: ease;
-    }
-}
-
-.tdSwingIn {
-	animation-name: tdSwingIn;
-}
-.tdSwingOut {
-	animation-name: tdSwingOut;
-}
-
-
-/* Hinge Flip */
-@keyframes tdHingeFlipIn {
-	0% { 
-		opacity: 0;
-		transform: perspective(600px) rotateX(0deg);
-		transform-origin: center top;
-		animation-timing-function: @easeOutCirc;
-    }
-    
-    50% {
-		transform: perspective(600px) rotateX(-10deg);
-		transform-origin: center top;
-		animation-timing-function: ease-in;
-    }
-
-	100% { 
-		opacity: 1;
-		transform: perspective(600px) rotateX(0deg);
-		transform-origin: center top;
-		animation-timing-function: ease-out;
-    }
-}
-
-.tdHingeFlipIn {
-	animation-name: tdHingeFlipIn;
-}
-
-@keyframes tdHingeFlipOut {
-	0% { 
-		opacity: 1;
-		transform: perspective(600px) rotateX(0deg);
-		transform-origin: center top;
-		animation-timing-function: @easeOutCirc;
-    }
-	
-    50% {
-		transform: perspective(600px) rotateX(-10deg);
-		transform-origin: center top;
-		animation-timing-function: ease-in;
-    }
-
-    100% { 
-		opacity: 0;
-		transform: perspective(600px) rotateX(0deg);
-		transform-origin: center top;
-		animation-timing-function: ease-out;
-    }
-}
-
-.tdHingeFlipOut {
-	animation-name: tdHingeFlipOut;
-}
-
-
-/* Drop In */
-@keyframes tdDropInLeft {
-	0% {
-		opacity: 0;
-	}
-	1% { 
-		opacity: 1;
-		transform: rotate(2deg) translateY(-15px);
-		transform-origin: right bottom;
-		animation-timing-function: ease-in;
-	}
-
-	50% {
-		opacity: 1;
-		transform: rotate(0) translateY(0px);
-		transform-origin: right bottom;
-		animation-timing-function: ease-out;
-	}
-
-	75% {
-		transform: rotate(-0.5deg) translateY(0px);
-		transform-origin: left bottom;
-		animation-timing-function: @easeInCirc;
-	}
-	100% { 
-		opacity: 1;
-		transform: rotate(0) translateY(0px);
-		transform-origin: center bottom;
-		animation-timing-function: @easeOutCirc;
-	}
-}
-
-@keyframes tdDropInRight {
-	0% {
-		opacity: 0;
-	}
-	1% { 
-		opacity: 1;
-		transform: rotate(-2deg) translateY(-15px);
-		transform-origin: left bottom;
-		animation-timing-function: ease-in;
-	}
-
-	50% {
-		opacity: 1;
-		transform: rotate(0) translateY(0px);
-		transform-origin: left bottom;
-		animation-timing-function: ease-out;
-	}
-
-	75% {
-		transform: rotate(0.5deg) translateY(0px);
-		transform-origin: right bottom;
-		animation-timing-function: @easeInCirc;
-	}
-	100% { 
-		opacity: 1;
-		transform: rotate(0) translateY(0px);
-		transform-origin: center bottom;
-		animation-timing-function: @easeOutCirc;
-	}
-}
-
-.tdDropInLeft {
-	animation-name: tdDropInLeft;
-}
-.tdDropInRight {
-	animation-name: tdDropInRight;
-}
+// load animation modules
+@import 'modules/basic-fade.less';
+@import 'modules/fade.less';
+@import 'modules/zoom.less';
+@import 'modules/swing.less';
+@import 'modules/hinge-flip.less';
+@import 'modules/drop.less';
