Change google font import url to relative protocol

--- a/demo.less
+++ b/demo.less
@@ -1,5 +1,5 @@
 /* stylesheet for tuesday demo page */
-@import url('http://fonts.googleapis.com/css?family=Lato:400,900italic,700');
+@import url('//fonts.googleapis.com/css?family=Lato:400,900italic,700');
 
 @red: #f05a67;
 @red-l1: #f69c97;
