--- a/demo.less
+++ b/demo.less
@@ -122,7 +122,7 @@ select.animationlist {
 	box-shadow: 0 0 0 1px #aaa inset;
 	line-height: 22px;
 	vertical-align: top;
-	font-size: 1rem;
+	font-size: 16px;
 	border-radius: 0;
 	cursor: pointer;
 	outline: none; 
