--- a/modules/zoom.less
+++ b/modules/zoom.less
@@ -1,5 +1,5 @@
-/* Zoom In */
-@keyframes tdZoomIn {
+/* Expand Entrances */
+@keyframes tdExpandIn {
     0% { 
         opacity: 0;
         transform: scale(0.85);
@@ -12,7 +12,7 @@
     }
 }
 
-@keyframes tdZoomInBounce {
+@keyframes tdExpandInBounce {
     0% { 
         opacity: 0;
         transform: scale(0.85);
@@ -29,15 +29,91 @@
     }
 }
 
-.tdZoomIn {
-    animation-name: tdZoomIn;
+.tdExpandIn {
+    animation-name: tdExpandIn;
 }
-.tdZoomInBounce {
-    animation-name: tdZoomInBounce;
+.tdExpandInBounce {
+    animation-name: tdExpandInBounce;
 }
 
-/* Zoom Out */
-@keyframes tdZoomOut {
+/* Expand Exits */
+@keyframes tdExpandOut {
+    0% { 
+        opacity: 1;
+        transform: scale(1);
+        animation-timing-function: @easeOutCirc;
+    }
+    100% { 
+        opacity: 0;
+        transform: scale(1.2);
+    }
+}
+
+@keyframes tdExpandOutBounce {
+    0% { 
+        opacity: 1;
+        transform: scale(1);
+        animation-timing-function: @easeOutCirc;
+    }
+    30% {
+        opacity: 1;
+        transform: scale(0.95);
+        animation-timing-function: ease;
+    }
+    100% { 
+        opacity: 0;
+        transform: scale(1.2);
+    }
+}
+
+.tdExpandOut {
+    animation-name: tdExpandOut;
+}
+.tdExpandOutBounce {
+    animation-name: tdExpandOutBounce;
+}
+
+
+
+
+/* Shrink Entrances */
+@keyframes tdShrinkIn {
+    0% { 
+        opacity: 0;
+        transform: scale(1.2);
+        animation-timing-function: @easeOutCirc;
+    }
+    100% { 
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes tdShrinkInBounce {
+    0% { 
+        opacity: 0;
+        transform: scale(1.2);
+        animation-timing-function: @easeOutCirc;
+    }
+    70% {
+        transform: scale(0.95);
+        animation-timing-function: ease;
+    }
+    100% { 
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.tdShrinkIn {
+    animation-name: tdShrinkIn;
+}
+.tdShrinkInBounce {
+    animation-name: tdShrinkInBounce;
+}
+
+/* Shrink Exits */
+@keyframes tdShrinkOut {
     0% { 
         opacity: 1;
         transform: scale(1);
@@ -50,7 +126,7 @@
     }
 }
 
-@keyframes tdZoomOutBounce {
+@keyframes tdShrinkOutBounce {
     0% { 
         opacity: 1;
         transform: scale(1);
@@ -68,9 +144,9 @@
     }
 }
 
-.tdZoomOut {
-    animation-name: tdZoomOut;
+.tdShrinkOut {
+    animation-name: tdShrinkOut;
 }
-.tdZoomOutBounce {
-    animation-name: tdZoomOutBounce;
+.tdShrinkOutBounce {
+    animation-name: tdShrinkOutBounce;
 }
