Add Stamp animation set

--- a/tuesday.less
+++ b/tuesday.less
@@ -18,6 +18,7 @@
 @import 'modules/basic-fade.less';
 @import 'modules/fade.less';
 @import 'modules/zoom.less';
+@import 'modules/stamp.less';
 @import 'modules/swing.less';
 @import 'modules/hinge-flip.less';
 @import 'modules/drop.less';
