Change comment format to LESS comments

--- a/modules/fade.less
+++ b/modules/fade.less
@@ -1,4 +1,4 @@
-/* Fading Entrances */
+// Fading Entrances
 @keyframes tdFadeInDown {
     0% { 
         opacity: 0;
@@ -64,7 +64,7 @@
     animation-name: tdFadeInRight;
 }
 
-/* Fading Exits */
+// Fading Exits
 @keyframes tdFadeOutUp {
     0% { 
         opacity: 1;
