--- a/modules/zoom.less
+++ b/modules/zoom.less
@@ -1,4 +1,4 @@
-/* Expand Entrances */
+// Expand Entrances
 @keyframes tdExpandIn {
     0% { 
         opacity: 0;
@@ -36,7 +36,7 @@
     animation-name: tdExpandInBounce;
 }
 
-/* Expand Exits */
+// Expand Exits
 @keyframes tdExpandOut {
     0% { 
         opacity: 1;
@@ -76,7 +76,7 @@
 
 
 
-/* Shrink Entrances */
+// Shrink Entrances
 @keyframes tdShrinkIn {
     0% { 
         opacity: 0;
@@ -112,7 +112,7 @@
     animation-name: tdShrinkInBounce;
 }
 
-/* Shrink Exits */
+// Shrink Exits
 @keyframes tdShrinkOut {
     0% { 
         opacity: 1;
