Separate easings variables to independent file

--- a/tuesday.less
+++ b/tuesday.less
@@ -3,8 +3,7 @@
 /* ==== A quirky CSS Animation Library ==== */
 /* ======================================== */
 
-@easeOutCirc: cubic-bezier(0, 0.590, 0.375, 1);
-@easeInCirc: cubic-bezier(0.590, 0, 1, 0.375);
+@import (reference) 'variables/_easing.less';
 
 .animated {
 	animation-duration: 0.3s;
