--- a/modules/zoom.less
+++ b/modules/zoom.less
@@ -1,4 +1,5 @@
-@import './keyframes/zoom.keyframes.less';
+@import './keyframes/zoom.expand.keyframes.less';
+@import './keyframes/zoom.shrink.keyframes.less';
 
 .tdExpandIn {
     .tdExpandIn();
