--- a/demo.less
+++ b/demo.less
@@ -1,5 +1,5 @@
 /* stylesheet for tuesday demo page */
-@import (css) url('//fonts.googleapis.com/css?family=Lato:400,900italic,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700,900i&display=swap');
 
 @red: #f05a67;
 @red-l1: #f69c97;
