--- a/demo.less
+++ b/demo.less
@@ -1,5 +1,5 @@
 /* stylesheet for tuesday demo page */
-@import url('//fonts.googleapis.com/css?family=Lato:400,900italic,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700,900i&display=swap');
 
 @red: #f05a67;
 @red-l1: #f69c97;
@@ -113,8 +113,7 @@ select.animationlist {
 	padding: 10px 15px;
 	margin: 0 5px 0 0;
 	
-	@caret-svg-data: escape("<svg xmlns='http://www.w3.org/2000/svg' width='30' height='24'><path fill='#aaa' d='M8 11l4 4 4-4z'/></svg>");
-	background-image: url("data:image/svg+xml,@{caret-svg-data}");
+	background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='24'><path fill='%23aaa' d='M8 11l4 4 4-4z'/></svg>");
 	background-repeat: no-repeat;
 	background-position: right center;
 
