Move .animated rules to separate file as mixin, import to keyframe files

--- a/keyframes/fade.keyframes.less
+++ b/keyframes/fade.keyframes.less
@@ -1,4 +1,5 @@
-@import (reference) './variables/_easing.less';
+@import (reference) './imports/_easing.less';
+@import (reference) './imports/_mixins.less';
 
 // Fading Entrances
 @keyframes tdFadeInDown {
