--- a/keyframes/hinge-flip.keyframes.less
+++ b/keyframes/hinge-flip.keyframes.less
@@ -1,4 +1,5 @@
-@import (reference) './variables/_easing.less';
+@import (reference) './imports/_easing.less';
+@import (reference) './imports/_mixins.less';
 
 // Hinge Flip
 @keyframes tdHingeFlipIn {
