--- a/tuesday.less
+++ b/tuesday.less
@@ -3,14 +3,11 @@
 /* ==== A quirky CSS Animation Library ==== */
 /* ======================================== */
 
-@import (reference) 'variables/_easing.less';
+@import (reference) 'imports/_easing.less';
+@import (reference) 'imports/_mixins.less';
 
 .animated {
-	animation-duration: 0.3s;
-	animation-fill-mode: both;
-}
-.animated.infinite {
-	animation-iteration-count: infinite;
+	.animated();
 }
 
 // load animation modules
