refactor: optimize for import (#3)
* Change comment format to LESS comments

* Separate easings variables to independent file

* Add separated files including keyframes and animation names as mixins only

* Refactor modules to use keyframe imports and reference animation name mixins

* Split zoom keyframes to expand/shrink

* Import easing variables to individual keyframes files

* Move .animated rules to separate file as mixin, import to keyframe files

--- a/modules/basic-fade.less
+++ b/modules/basic-fade.less
@@ -1,27 +1,8 @@
-/* Basic Fades */
-@keyframes tdFadeIn {
-    0% { 
-        opacity: 0;
-    }
-
-    100% { 
-        opacity: 1;
-    }
-}
-
-@keyframes tdFadeOut {
-    0% { 
-        opacity: 1;
-    }
-
-    100% { 
-        opacity: 0;
-    }
-}
+@import './keyframes/basic-fade.keyframes.less';
 
 .tdFadeIn {
-    animation-name: tdFadeIn;
+    .tdFadeIn();
 }
 .tdFadeOut {
-    animation-name: tdFadeOut;
+    .tdFadeOut();
 }
