--- a/modules/stamp.less
+++ b/modules/stamp.less
@@ -1,54 +1,9 @@
-/* Stamp Entrances */
-@keyframes tdStampIn {
-    0% { 
-        opacity: 0;
-        transform: scale(1.3);
-        animation-timing-function: @easeInCirc;
-    }
-    50% {
-        opacity: 1;
-    }
-    70% {
-        opacity: 1;
-        transform: scale(1);
-    }
-    90% {
-        opacity: 1;
-        transform: scale(1.03);
-    }
-    100% { 
-        opacity: 1;
-        transform: scale(1);
-    }
-}
-
-@keyframes tdStampInSwing {
-    0% { 
-        opacity: 0;
-        transform: scale(1.3) rotate(-10deg);
-        animation-timing-function: @easeInCirc;
-    }
-    50% {
-        opacity: 1;
-    }
-    70% {
-        opacity: 1;
-        transform: scale(1);
-    }
-    90% {
-        opacity: 1;
-        transform: scale(1.03);
-    }
-    100% { 
-        opacity: 1;
-        transform: scale(1) rotate(0);
-    }
-}
+@import './keyframes/stamp.keyframes.less';
 
 .tdStampIn {
-    animation-name: tdStampIn;
+    .tdStampIn();
 }
 .tdStampInSwing {
-    animation-name: tdStampInSwing;
+    .tdStampInSwing();
 }
 
