--- a/modules/zoom.less
+++ b/modules/zoom.less
@@ -1,152 +1,28 @@
-/* Expand Entrances */
-@keyframes tdExpandIn {
-    0% { 
-        opacity: 0;
-        transform: scale(0.85);
-        animation-timing-function: @easeOutCirc;
-    }
-
-    100% { 
-        opacity: 1;
-        transform: scale(1);
-    }
-}
-
-@keyframes tdExpandInBounce {
-    0% { 
-        opacity: 0;
-        transform: scale(0.85);
-        animation-timing-function: @easeOutCirc;
-    }
-    70% {
-        transform: scale(1.03);
-        animation-timing-function: ease;
-    }
-    100% { 
-        opacity: 1;
-        transform: scale(1);
-        animation-timing-function: ease;
-    }
-}
+@import './keyframes/zoom.expand.keyframes.less';
+@import './keyframes/zoom.shrink.keyframes.less';
 
 .tdExpandIn {
-    animation-name: tdExpandIn;
+    .tdExpandIn();
 }
 .tdExpandInBounce {
-    animation-name: tdExpandInBounce;
+    .tdExpandInBounce();
 }
-
-/* Expand Exits */
-@keyframes tdExpandOut {
-    0% { 
-        opacity: 1;
-        transform: scale(1);
-        animation-timing-function: @easeOutCirc;
-    }
-    100% { 
-        opacity: 0;
-        transform: scale(1.2);
-    }
-}
-
-@keyframes tdExpandOutBounce {
-    0% { 
-        opacity: 1;
-        transform: scale(1);
-        animation-timing-function: @easeOutCirc;
-    }
-    30% {
-        opacity: 1;
-        transform: scale(0.95);
-        animation-timing-function: ease;
-    }
-    100% { 
-        opacity: 0;
-        transform: scale(1.2);
-    }
-}
-
 .tdExpandOut {
-    animation-name: tdExpandOut;
+    .tdExpandOut();
 }
 .tdExpandOutBounce {
-    animation-name: tdExpandOutBounce;
-}
-
-
-
-
-/* Shrink Entrances */
-@keyframes tdShrinkIn {
-    0% { 
-        opacity: 0;
-        transform: scale(1.2);
-        animation-timing-function: @easeOutCirc;
-    }
-    100% { 
-        opacity: 1;
-        transform: scale(1);
-    }
-}
-
-@keyframes tdShrinkInBounce {
-    0% { 
-        opacity: 0;
-        transform: scale(1.2);
-        animation-timing-function: @easeOutCirc;
-    }
-    70% {
-        transform: scale(0.95);
-        animation-timing-function: ease;
-    }
-    100% { 
-        opacity: 1;
-        transform: scale(1);
-    }
+    .tdExpandOutBounce();
 }
 
 .tdShrinkIn {
-    animation-name: tdShrinkIn;
+    .tdShrinkIn();
 }
 .tdShrinkInBounce {
-    animation-name: tdShrinkInBounce;
+    .tdShrinkInBounce();
 }
-
-/* Shrink Exits */
-@keyframes tdShrinkOut {
-    0% { 
-        opacity: 1;
-        transform: scale(1);
-        animation-timing-function: @easeOutCirc;
-    }
-    100% { 
-        opacity: 0;
-        transform: scale(0.85);
-        animation-timing-function: ease;
-    }
-}
-
-@keyframes tdShrinkOutBounce {
-    0% { 
-        opacity: 1;
-        transform: scale(1);
-        animation-timing-function: @easeOutCirc;
-    }
-    30% {
-        opacity: 1;
-        transform: scale(1.03);
-        animation-timing-function: ease;
-    }
-    100% { 
-        opacity: 0;
-        transform: scale(0.85);
-        animation-timing-function: ease;
-    }
-}
-
 .tdShrinkOut {
-    animation-name: tdShrinkOut;
+    .tdShrinkOut();
 }
 .tdShrinkOutBounce {
-    animation-name: tdShrinkOutBounce;
+    .tdShrinkOutBounce();
 }
