--- a/tuesday.less
+++ b/tuesday.less
@@ -3,15 +3,11 @@
 /* ==== A quirky CSS Animation Library ==== */
 /* ======================================== */
 
-@easeOutCirc: cubic-bezier(0, 0.590, 0.375, 1);
-@easeInCirc: cubic-bezier(0.590, 0, 1, 0.375);
+@import (reference) 'imports/_easing.less';
+@import (reference) 'imports/_mixins.less';
 
 .animated {
-	animation-duration: 0.3s;
-	animation-fill-mode: both;
-}
-.animated.infinite {
-	animation-iteration-count: infinite;
+	.animated();
 }
 
 // load animation modules
