fix: modules import path

--- a/keyframes/swing.keyframes.less
+++ b/keyframes/swing.keyframes.less
@@ -1,5 +1,5 @@
-@import (reference) './imports/_easing.less';
-@import (reference) './imports/_mixins.less';
+@import (reference) '../imports/_easing.less';
+@import (reference) '../imports/_mixins.less';
 
 // Swing
 @keyframes tdSwingIn {
