--- a/modules/basic-fade.less
+++ b/modules/basic-fade.less
@@ -1,4 +1,4 @@
-@import './keyframes/basic-fade.keyframes.less';
+@import '../keyframes/basic-fade.keyframes.less';
 
 .tdFadeIn {
     .tdFadeIn();
