--- a/modules/hinge-flip.less
+++ b/modules/hinge-flip.less
@@ -1,4 +1,4 @@
-@import './keyframes/hinge-flip.keyframes.less';
+@import '../keyframes/hinge-flip.keyframes.less';
 
 .tdHingeFlipIn {
     .tdHingeFlipIn();
