--- a/keyframes/zoom.shrink.keyframes.less
+++ b/keyframes/zoom.shrink.keyframes.less
@@ -1,5 +1,5 @@
-@import (reference) './imports/_easing.less';
-@import (reference) './imports/_mixins.less';
+@import (reference) '../imports/_easing.less';
+@import (reference) '../imports/_mixins.less';
 
 // Shrink Entrances
 @keyframes tdShrinkIn {
