--- a/less/tuesday.less
+++ b/less/tuesday.less
@@ -1,7 +1,7 @@
-/* ======================================== */
-/* ==== tuesday.less ====================== */
-/* ==== A quirky CSS Animation Library ==== */
-/* ======================================== */
+// ======================================== //
+// ==== tuesday.less ====================== //
+// ==== A quirky CSS Animation Library ==== //
+// ======================================== //
 
 @import (reference) 'imports/_easing.less';
 @import (reference) 'imports/_mixins.less';
